password and email updated

--- a/Backend/my.env
+++ b/Backend/my.env
@@ -1,5 +1,5 @@
 PORT = 5000
 MONGO_URL = mongodb://127.0.0.1:27017/Express_junction
-JWT_SECRET = Dp@25503
-EMAIL="expressjunction58@gmail.com"
-EMAIL_PASS="ezsa zhne rrjh tzxb"
+JWT_SECRET = Dp@25703
+EMAIL="21it426@bvmengineering.ac.in"
+EMAIL_PASS="Dp@25703"
