--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,11 @@
     "@reduxjs/toolkit": "^2.2.2",
     "axios": "^1.6.8",
     "cookie-parser": "^1.4.6",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.307.0",
+    "qr-code-styling": "^1.6.0-rc.1",
+    "qr-scanner": "^1.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
