--- a/Backend/my.env
+++ b/Backend/my.env
@@ -3,3 +3,6 @@ MONGO_URL = mongodb://127.0.0.1:27017/Express_junction
 JWT_SECRET = Dp@25703
 EMAIL="21it426@bvmengineering.ac.in"
 EMAIL_PASS="Dp@25703"
+
+RAZORPAY_SECERAT_KEY="pyLklHCnPrGcprj949oWnVGG"
+RAZORPAY_KEY_ID="rzp_test_020RZEX5akHgS5"
