--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,13 +11,14 @@
     "mongoose": "^8.0.3",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.2",
-    "pincode-distance-calculator": "^1.1.1"
+    "pincode-distance-calculator": "^1.1.1",
+    "razorpay": "^2.9.4"
   },
   "name": "backend",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node /server.js",
+    "start": "node server.js",
     "dev": "nodemon /server.js"
   },
   "author": "",
